--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class="no-js" lang="es">
-
 <head>
 	<script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-145849239-1"></script>
 	<script>
@@ -9,8 +8,8 @@
 		gtag('js', new Date());
 
 		gtag('config', 'UA-145849239-1');
-	</script><!-- Removed by WebCopy -->
-	<!-- <base href="/"> -->
+	</script>
+	<base href="/">
 	<!-- Removed by WebCopy -->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
@@ -81,5 +80,45 @@
 	<script src="./assets/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
 	<script src="./assets/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
   <app-root></app-root>
+
+  <div class="modal fade" id="modalEnConstruccion" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+  aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header" style="border-bottom: none">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-12">
+            <div class="offset-3 col-6" style="padding: 2rem 2rem; color: rgb(236, 128, 30)">
+              <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas"
+                data-icon="tools" class="svg-inline--fa fa-tools fa-w-16" role="img" viewbox="0 0 512 512">
+                <path fill="currentColor"
+                  d="M501.1 395.7L384 278.6c-23.1-23.1-57.6-27.6-85.4-13.9L192 158.1V96L64 0 0 64l96 128h62.1l106.6 106.6c-13.6 27.8-9.2 62.3 13.9 85.4l117.1 117.1c14.6 14.6 38.2 14.6 52.7 0l52.7-52.7c14.5-14.6 14.5-38.2 0-52.7zM331.7 225c28.3 0 54.9 11 74.9 31l19.4 19.4c15.8-6.9 30.8-16.5 43.8-29.5 37.1-37.1 49.7-89.3 37.9-136.7-2.2-9-13.5-12.1-20.1-5.5l-74.4 74.4-67.9-11.3L334 98.9l74.4-74.4c6.6-6.6 3.4-17.9-5.7-20.2-47.4-11.7-99.6.9-136.6 37.9-28.5 28.5-41.9 66.1-41.2 103.6l82.1 82.1c8.1-1.9 16.5-2.9 24.7-2.9zm-103.9 82l-56.7-56.7L18.7 402.8c-25 25-25 65.5 0 90.5s65.5 25 90.5 0l123.6-123.6c-7.6-19.9-9.9-41.6-5-62.7zM64 472c-13.2 0-24-10.8-24-24 0-13.3 10.7-24 24-24s24 10.7 24 24c0 13.2-10.7 24-24 24z">
+                </path>
+              </svg>
+            </div>
+          </div>
+        </div>
+        <blockquote class="blockquote text-center">
+          <h1 class="text-center display-4" style="color: #0266a4; font-size: 3rem">
+            Sección en construcción
+          </h1>
+          <p class="lead">Próximamente podrás realizar tus pagos en línea.</p>
+        </blockquote>
+      </div>
+    </div>
+  </div>
+</div>
+<script>
+  function showModal() {
+    $("#modalEnConstruccion").modal("show");
+  }
+</script>
+<style>
+</style>
 </body>
 </html>
