--- a/src/index.html
+++ b/src/index.html
@@ -81,43 +81,183 @@
 	<script src="./assets/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
   <app-root></app-root>
 
-  <div class="modal fade" id="modalEnConstruccion" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-  aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header" style="border-bottom: none">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-12">
-            <div class="offset-3 col-6" style="padding: 2rem 2rem; color: rgb(236, 128, 30)">
-              <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas"
-                data-icon="tools" class="svg-inline--fa fa-tools fa-w-16" role="img" viewbox="0 0 512 512">
-                <path fill="currentColor"
-                  d="M501.1 395.7L384 278.6c-23.1-23.1-57.6-27.6-85.4-13.9L192 158.1V96L64 0 0 64l96 128h62.1l106.6 106.6c-13.6 27.8-9.2 62.3 13.9 85.4l117.1 117.1c14.6 14.6 38.2 14.6 52.7 0l52.7-52.7c14.5-14.6 14.5-38.2 0-52.7zM331.7 225c28.3 0 54.9 11 74.9 31l19.4 19.4c15.8-6.9 30.8-16.5 43.8-29.5 37.1-37.1 49.7-89.3 37.9-136.7-2.2-9-13.5-12.1-20.1-5.5l-74.4 74.4-67.9-11.3L334 98.9l74.4-74.4c6.6-6.6 3.4-17.9-5.7-20.2-47.4-11.7-99.6.9-136.6 37.9-28.5 28.5-41.9 66.1-41.2 103.6l82.1 82.1c8.1-1.9 16.5-2.9 24.7-2.9zm-103.9 82l-56.7-56.7L18.7 402.8c-25 25-25 65.5 0 90.5s65.5 25 90.5 0l123.6-123.6c-7.6-19.9-9.9-41.6-5-62.7zM64 472c-13.2 0-24-10.8-24-24 0-13.3 10.7-24 24-24s24 10.7 24 24c0 13.2-10.7 24-24 24z">
-                </path>
-              </svg>
-            </div>
-          </div>
-        </div>
-        <blockquote class="blockquote text-center">
-          <h1 class="text-center display-4" style="color: #0266a4; font-size: 3rem">
-            Sección en construcción
-          </h1>
-          <p class="lead">Próximamente podrás realizar tus pagos en línea.</p>
-        </blockquote>
-      </div>
-    </div>
-  </div>
-</div>
-<script>
-  function showModal() {
-    $("#modalEnConstruccion").modal("show");
-  }
-</script>
+	<div class="mobile-menu-overlay" id="mobile-menu-overlay">
+		<div class="mobile-menu-overlay__header">
+			<div class="container-fluid--cp-60">
+				<div class="row align-items-center">
+					<div class="col-md-4 col-sm-6 col-9">
+						<div class="logo"><a href="inicio.html"><img src="assets/img/logo/logo-blue-dark.png"
+									class="img-fluid" alt="Ramédicas"></a></div>
+					</div>
+					<div class="col-md-8 col-sm-6 col-3">
+						<div class="mobile-menu-content"><a class="mobile-navigation-close-icon"
+								id="mobile-menu-close-trigger" href="javascript:void(0)"><i
+									class="ion-ios-close-empty"></i></a></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="mobile-menu-overlay__body">
+			<nav class="offcanvas-navigation">
+				<ul>
+					<li class=" active "><a href="inicio.html" class="active"> Inicio</a></li>
+					<li class=" has-children"><a href="javascript:void(0)" class="">Nosotros</a>
+						<ul class="sub-menu">
+							<li><a href="nosotros/quienes-somos.html" class="" hello="">Quienes somos</a></li>
+							<li><a href="nosotros/valores-corporativos.html" class="" hello="">Valores Corporativos</a>
+							</li>
+							<li><a href="nosotros/mision-y-vision.html" class="" hello="">Misión y visión</a></li>
+							<li><a href="nosotros/politicas.html" class="" hello="">Políticas</a></li>
+							<li><a href="nosotros/certificaciones.html" class="" hello="">Certificaciones</a></li>
+							<li><a href="nosotros/politica-de-tratamiento-de-datos.html" class="" hello="">Política de
+									tratamiento de datos</a></li>
+						</ul>
+					</li>
+					<li class=" has-children"><a href="javascript:void(0)" class="">Unidades de negocio</a>
+						<ul class="sub-menu">
+							<li><a href="unidades-de-negocio/comercializacion.html" class=""
+									hello="">Comercialización</a></li>
+							<li><a href="unidades-de-negocio/hospitalaria.html" class="" hello="">Hospitalaria</a></li>
+							<li><a href="unidades-de-negocio/dispensacion.html" class="" hello="">Dispensación</a></li>
+						</ul>
+					</li>
+					<li class=" has-children"><a href="javascript:void(0)" class="">Portafolio</a>
+						<ul class="sub-menu">
+							<li><a href="portafolio/lineas-de-productos.html" class="" hello="">Lineas de productos</a>
+							</li>
+							<li><a href="portafolio/nuestros-proveedores.html" class="" hello="">Nuestros
+									proveedores</a></li>
+						</ul>
+					</li>
+					<li class=" has-children"><a href="publicaciones.html" class="">Publicaciones</a>
+						<ul class="sub-menu">
+							<li><a href="publicaciones/regulatorios.html" class="" hello="">Regulatorios</a></li>
+							<li><a href="publicaciones/actualidad.html" class="" hello="">Actualidad</a></li>
+							<li><a href="publicaciones/novedades.html" class="" hello="">Novedades</a></li>
+						</ul>
+					</li>
+					<li class=" has-children"><a href="javascript:void(0)" class="">Contacto</a>
+						<ul class="sub-menu">
+							<li><a href="contacto/directorio.html" class="" hello="">Directorio</a></li>
+							<li><a href="contacto/trabaje-con-nosotros.html" class="" hello="">Trabaje con nosotros</a>
+							</li>
+							<li><a href="index-1.htm" class="" hello="">PQRS</a></li>
+							<li><a href="index-2.htm" class="" hello="">Plataforma Clientes</a></li>
+							<li><a href="contacto.html" class="" hello="">Escríbenos</a></li>
+						</ul>
+					</li>
+				</ul>
+			</nav>
+		</div>
+	</div>
+	<div class="search-overlay" id="search-overlay"><a id="popup-search-close" class="popup-search-close"><i
+				class="ion-ios-close-empty"></i></a>
+		<div class="page-popup-search-inner">
+			<form action="resultados"><input type="text" class="search-field" name="palabra" id="search-field"
+					required=""></form>
+			<p class="form-description">Oprima enter para buscar, escape para cerrar</p>
+		</div>
+	</div><a href="#" class="scroll-top" id="scroll-top"><i class="ion-android-arrow-up"></i></a>
+	<div class="modal fade" id="modalEnConstruccion" tabindex="-1" role="dialog"
+		aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header" style="border-bottom:none;"><button type="button" class="close"
+						data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button></div>
+				<div class="modal-body">
+					<div class="row">
+						<div class="col-12">
+							<div class="offset-3 col-6" style="padding:2rem 2rem;color:rgb(236,128,30);"><svg
+									xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
+									data-prefix="fas" data-icon="tools" class="svg-inline--fa fa-tools fa-w-16"
+									role="img" viewbox="0 0 512 512">
+									<path fill="currentColor"
+										d="M501.1 395.7L384 278.6c-23.1-23.1-57.6-27.6-85.4-13.9L192 158.1V96L64 0 0 64l96 128h62.1l106.6 106.6c-13.6 27.8-9.2 62.3 13.9 85.4l117.1 117.1c14.6 14.6 38.2 14.6 52.7 0l52.7-52.7c14.5-14.6 14.5-38.2 0-52.7zM331.7 225c28.3 0 54.9 11 74.9 31l19.4 19.4c15.8-6.9 30.8-16.5 43.8-29.5 37.1-37.1 49.7-89.3 37.9-136.7-2.2-9-13.5-12.1-20.1-5.5l-74.4 74.4-67.9-11.3L334 98.9l74.4-74.4c6.6-6.6 3.4-17.9-5.7-20.2-47.4-11.7-99.6.9-136.6 37.9-28.5 28.5-41.9 66.1-41.2 103.6l82.1 82.1c8.1-1.9 16.5-2.9 24.7-2.9zm-103.9 82l-56.7-56.7L18.7 402.8c-25 25-25 65.5 0 90.5s65.5 25 90.5 0l123.6-123.6c-7.6-19.9-9.9-41.6-5-62.7zM64 472c-13.2 0-24-10.8-24-24 0-13.3 10.7-24 24-24s24 10.7 24 24c0 13.2-10.7 24-24 24z">
+									</path>
+								</svg></div>
+						</div>
+					</div>
+					<blockquote class="blockquote text-center">
+						<h1 class="text-center display-4" style="color:#0266A4;font-size:3rem;">Sección en construcción
+						</h1>
+						<p class="lead">Próximamente podrás realizar tus pagos en línea.</p>
+					</blockquote>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script>
+		function showModal() {
+			$('#modalEnConstruccion').modal('show')
+		}
+	</script>
+	<style type="text/css">
+		.padrebtn {
+			position: fixed;
+			margin: 0;
+			height: 60px;
+			z-index: 9999;
+		}
+
+		.hijobtn {
+			background-color: #25D366;
+			color: #fff;
+			border-radius: 30px;
+			box-shadow: 1px 6px 24px 0 rgba(7, 94, 84, .24);
+			cursor: pointer;
+			transition: background-color .5s ease-in-out;
+			width: 60px;
+			height: 60px;
+			margin-left: 14px;
+			margin-right: 14px;
+		}
+
+		.wsbtn {
+			width: 36px;
+			height: 60px;
+			margin-left: 12px;
+			margin-right: 12px;
+		}
+
+		.wsbtn-tl {
+			top: 8px;
+			left: 0;
+		}
+
+		.wsbtn-tr {
+			top: 8px;
+			right: 0;
+		}
+
+		.wsbtn-ml {
+			top: 46%;
+			left: 0;
+		}
+
+		.wsbtn-mr {
+			top: 46%;
+			right: 0;
+		}
+
+		.wsbtn-bl {
+			left: 0;
+			bottom: 8px;
+		}
+
+		.wsbtn-br {
+			bottom: 8px;
+			right: 0;
+		}
+	</style>
+	<div class="padrebtn wsbtn-bl"><a target="_blank"
+			href="https://api.whatsapp.com/send?phone=573174726401&text=Hola quisiera mayor información...">
+			<div class="hijobtn"><svg class="wsbtn" xmlns="https://www.w3.org/2000/svg" viewbox="0 0 24 24">
+					<path
+						d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"
+						fill="currentColor"></path>
+				</svg></div>
+		</a></div>
+
 <style>
 </style>
 </body>
