--- a/src/index.html
+++ b/src/index.html
@@ -157,8 +157,13 @@
 					required=""></form>
 			<p class="form-description">Oprima enter para buscar, escape para cerrar</p>
 		</div>
-	</div><a href="#" class="scroll-top" id="scroll-top"><i class="ion-android-arrow-up"></i></a>
-	<div class="modal fade" id="modalEnConstruccion" tabindex="-1" role="dialog"
+	</div>
+
+
+  <a href="#" class="scroll-top" id="scroll-top"><i class="ion-android-arrow-up"></i></a>
+
+
+  <div class="modal fade" id="modalEnConstruccion" tabindex="-1" role="dialog"
 		aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
@@ -257,8 +262,5 @@
 						fill="currentColor"></path>
 				</svg></div>
 		</a></div>
-
-<style>
-</style>
 </body>
 </html>
